--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==7.1.2
 Flask==1.1.2
 Flask-MySQLdb==0.2.0
 future==0.18.2
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -14,7 +15,7 @@ MarkupSafe==1.1.1
 mysql-connector-python==8.0.22
 mysqlclient==2.0.3
 numpy==1.19.5
-pandas==1.2.0
+pandas==1.1.5
 pefile==2019.4.18
 plyer==2.0.0
 protobuf==3.14.0
